syntax = "proto3";

package common;

import "resource.proto";
import "tool.proto";

message Empty {
  bool void = 1;
}

message Usage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
}

message Choice {
  int32 index = 1;
  Message message = 2;
  optional string finish_reason = 3;
}

message Embedding {
  int32 index = 1;
  repeated float embedding = 2;
}

message Conversation {
  resource.Identifier id = 1;
}

message Message {
  resource.Identifier id = 1;
  resource.Descriptor descriptor = 2;
  resource.Content content = 3;
  string role = 4;
  repeated tool.ToolDefinition tool_calls = 5;
  optional string tool_call_id = 6;
}

message Assistant {
  resource.Identifier id = 1;
  resource.Descriptor descriptor = 2;
  resource.Content content = 3;
  string role = 4;
}
