syntax = "proto3";

import "common.proto";

package history;

service History {
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
  rpc UpdateHistory(UpdateHistoryRequest) returns (UpdateHistoryResponse);
}

message GetHistoryRequest {
  string session_id = 1;
}

message GetHistoryResponse {
  common.Prompt prompt = 1;
}

message UpdateHistoryRequest {
  string session_id = 1;
  common.Prompt prompt = 2;
  string github_token = 3;
}

message UpdateHistoryResponse {
  bool success = 1;
  bool optimized = 2;
}
